--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="css/img/1.jpg" class="d-block w-100" alt="...">
+      <img src="1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <p>Technology News,Development and Trends</p>
            <button class="btn btn-danger">Technology News</button>
