--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <a href="#" class="stretched-link">Continue reading</a>
               </div>
             <div class="col-auto d-none d-lg-block">
-               <img src="css/img/first.jpeg"width="200" height="250">
+               <img src="first.jpeg"width="200" height="250">
               </div>
             </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
